[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://labelfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/hud/blank-button-pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/animals/deer/actual-deer.png" type="Texture" id=4]
[ext_resource path="res://assets/animals/tiger/tiger.png" type="Texture" id=5]
[ext_resource path="res://assets/animals/bear/new-bear.png" type="Texture" id=6]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 805.0

[node name="TigerButton2" type="TextureButton" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 173.0
texture_normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/TigerButton2"]
position = Vector2( 88.1944, 83.1548 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="BearButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 177.0
margin_right = 984.0
margin_bottom = 350.0
texture_normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/BearButton"]
position = Vector2( 88.1944, 83.1548 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="MooseButton" type="Button" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 984.0
margin_bottom = 393.0
custom_fonts/font = ExtResource( 2 )
text = "Create Moose"

[node name="DeerButton2" type="TextureButton" parent="VBoxContainer"]
margin_top = 397.0
margin_right = 984.0
margin_bottom = 570.0
texture_normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/DeerButton2"]
position = Vector2( 88.1944, 83.1548 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="RabbitButton" type="Button" parent="VBoxContainer"]
margin_top = 574.0
margin_right = 984.0
margin_bottom = 613.0
custom_fonts/font = ExtResource( 2 )
text = "Create Rabbit"

[node name="FoxButton" type="Button" parent="VBoxContainer"]
margin_top = 617.0
margin_right = 984.0
margin_bottom = 656.0
custom_fonts/font = ExtResource( 2 )
text = "Create Fox"

[node name="BeaverButton" type="Button" parent="VBoxContainer"]
margin_top = 660.0
margin_right = 984.0
margin_bottom = 699.0
custom_fonts/font = ExtResource( 2 )
text = "Create Beaver"

[node name="PlantButton" type="Button" parent="VBoxContainer"]
margin_top = 703.0
margin_right = 984.0
margin_bottom = 742.0
custom_fonts/font = ExtResource( 2 )
text = "Create Plant"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 746.0
margin_right = 984.0
margin_bottom = 785.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[connection signal="button_up" from="VBoxContainer/TigerButton2" to="." method="_on_TigerButton_button_up"]
[connection signal="button_up" from="VBoxContainer/BearButton" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/MooseButton" to="." method="_on_MooseButton_button_up"]
[connection signal="button_up" from="VBoxContainer/DeerButton2" to="." method="_on_DeerButton_button_up"]
[connection signal="button_up" from="VBoxContainer/RabbitButton" to="." method="_on_RabbitButton_button_up"]
[connection signal="button_up" from="VBoxContainer/FoxButton" to="." method="_on_FoxButton_button_up"]
[connection signal="pressed" from="VBoxContainer/BeaverButton" to="." method="_on_BeaverButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PlantButton" to="." method="_on_PlantButton_pressed"]
[connection signal="button_up" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
